# lupa-from-lua

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  buildlupa.sh  requirements.txt  setuplupa.sh  test.lua  todo.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  ext.py  lupafromlua.c  lupafromlua.h  lupafromluatest.c
tests/: compat.lua  framework.lua  gc.lua  init.lua  lupa.lua  main.lua  python.lua  run.lua  suite.lua  test.lua  testbench.lua  timeit.lua  utils.lua
